--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                 <div class="row">
                     <div class="col-md-10">
                         <div class="logo_white">
-                            <img src="img/logo.png" alt="">
+                            <img src="img/logo-w.png" alt="">
                             <p class="mint"> © 2020 - Mint,All Right Reserved</p>
                         </div>
                     </div>
